--- a/public/view/help.html
+++ b/public/view/help.html
@@ -41,7 +41,8 @@
         <!-- Navigation. We hide it in small screens. -->
         <nav class="mdl-navigation mdl-layout--large-screen-only">
           <a class="mdl-navigation__link" href="/">Feed</a>
-          <a class="mdl-navigation__link" href="/settings">Settings</a>
+          <a class="mdl-navigation__link" href="/view/help.html">Help</a>
+          <a class="mdl-navigation__link" href="/view/carousel.html">Carousel</a>
           <div class="drawer-option">
             <button class="enable-notifications mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-color--accent">
               Enable Notifications
@@ -54,7 +55,8 @@
       <span class="mdl-layout-title">Idyllica</span>
       <nav class="mdl-navigation">
         <a class="mdl-navigation__link" href="/">Feed</a>
-        <a class="mdl-navigation__link" href="/help">Help</a>
+        <a class="mdl-navigation__link" href="/view/help.html">Help</a>
+        <a class="mdl-navigation__link" href="/view/carousel.html">Carousel</a>
         <div class="drawer-option">
           <button class="enable-notifications mdl-button mdl-js-button mdl-button--raised mdl-button--colored mdl-color--accent">
             Enable Notifications
